test/2-errors/parse-bare-dash.test
{
  'code' : 1,
  'err' : '''\
test/2-errors/parse-bare-dash.ploy:1:2: parse error: unexpected character: '\\n'
    -
     ^
'''
}
